cmake_minimum_required(VERSION 3.19)
SET(CMAKE_C_COMPILER /usr/bin/clang)
SET(CMAKE_CXX_COMPILER /usr/bin/clang++)
project(test)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
set(CMAKE_OSX_ARCHITECTURES "arm64")
set(CMAKE_CXX_STANDARD 20)
find_package (Eigen3 3.4 REQUIRED NO_MODULE)

set(BREW_DIR /opt/homebrew/Cellar)
include_directories(${BREW_DIR}/gflags/2.2.2/include)
include_directories(${BREW_DIR}/eigen/3.4.0_1/include/eigen3)
include_directories(${BREW_DIR}/glog/0.5.0/include)
include_directories(include)

link_directories(${BREW_DIR}/gflags/2.2.2/lib)
link_directories(${BREW_DIR}/glog/0.5.0/lib)
add_executable(p_sparse src/push_sparse.cpp src/time_recorder.cpp)
target_link_libraries(p_sparse gflags glog)